<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white_background"
    tools:context=".SelectLevelPage">

    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/blue_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:text="@string/select_type"
        android:textColor="@color/blue_app"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_select_topic"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/what_activity"
        android:textColor="@color/blue_app"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_level" />

    <Button
        android:id="@+id/button_grammar"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/grammar"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_vocab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_select_topic"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_vocab"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/vocab"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_reading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_grammar" />

    <Button
        android:id="@+id/button_reading"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reading"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_vocab" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/back_button"
        android:textColor="@color/blue_app"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>