...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_type" />


    <ListView
        android:id="@+id/recycler_topic"
        android:layout_width="291dp"
        android:layout_height="347dp"
        android:layout_marginTop="16dp"
        android:divider="@color/white_background"
        android:dividerHeight="12dp"
        android:focusable="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_select_topic" />

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginBottom="120dp"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
